<resources>
    <string name="app_name">JeeKay</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="info">Login Attempts Left: </string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">user@useremail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_user_profile">User Profile</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_bookings">Bookings</string>
    <string name="menu_refer_and_earn">Refer &amp; Earn</string>
    <string name="menu_help">Help</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_terms_and_conditions">Terms and Condition</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="menu_header">Menu</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="title_activity_bookings">Map</string>
    <string name="lorem_ipsem">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed felis eget
        velit aliquet sagittis id consectetur purus. Nullam vehicula ipsum a arcu cursus
        vitae congue.</string>
    <string name="pick_up_prompt">Select Pickup Point </string>
    <string name="dropoff_prompt">Select Drop-off Point</string>

    <string-array name="Pick_up_list">
        <item>BIET College</item>
        <item>UBDT College</item>
        <item>GMIT College</item>
        <item>Jain College</item>
        <item>Ram &amp; co Circle</item>
        <item>Vidyarthi Bhavan</item>
        <item>Mcc B Block</item>
    </string-array>
</resources>
